<resources>
    <string name="app_name">AmpTown</string>
    <string name="amptown">AmpTown</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>