<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="454dp"
        android:layout_height="736dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_back"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="83dp"
        android:gravity="center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="3.6"
        android:shadowDy="2.1"
        android:shadowRadius="1.9"
        android:text="@string/amptown"
        android:textColor="#FFD700"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="126dp"
        android:layout_height="56dp"
        android:background="@drawable/button_background"
        android:onClick="mainMenuNewGame"
        android:text="@string/new_game"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/btnLoadGame"
        android:layout_width="126dp"
        android:layout_height="56dp"
        android:background="@drawable/button_background"
        android:onClick="mainMenuLoadGame"
        android:text="@string/load_game"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewGame"
        app:layout_constraintVertical_bias="0.10" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="126dp"
        android:layout_height="56dp"
        android:background="@drawable/button_background"
        android:onClick="mainMenuSettings"
        android:text="@string/settings"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadGame"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="126dp"
        android:layout_height="56dp"
        android:background="@drawable/button_background"
        android:onClick="MainMenuExit"
        android:text="@string/exit"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>